--- a/clock.css
+++ b/clock.css
@@ -85,7 +85,7 @@ img {
 @media (max-width: 540px) {
     #imgBox {
         top: 18vh;
-        margin: 0;
+        margin: 0 2px 0 0;
     }
     img {
         width: 94vw;
